objects/TracRTC__Data_Pipe_Action__c.object
<CustomObject>
    <description>Holds the information used by the data pipeline processing service to clean data.</description>
    <fields>
        <fullName>TracRTC__Action_Source__c</fullName>
        <description>This represents where the action originated from.</description>
        <label>Action Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Settings</fullName>
                </value>
                <value>
                    <fullName>FlowStep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TracRTC__Action_Type__c</fullName>
        <description>The action type to be used to clean the source field.</description>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Filter</fullName>
                </value>
                <value>
                    <fullName>TokenRemoval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TracRTC__Expression_Type__c</fullName>
        <description>This represents what to expect in the expression either a regex or a list.</description>
        <label>Expression Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Regex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TracRTC__Expression__c</fullName>
        <description>To hold the expression to filter by.</description>
        <label>Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Object_Type__c</fullName>
        <description>This is the object that the fields originate from.</description>
        <label>Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Source_Field__c</fullName>
        <description>The source field to be cleaned.</description>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Target_Field__c</fullName>
        <description>The target field to hold the cleaned source field.</description>
        <label>Target Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Data Pipe Action</label>
    <nameField>
        <label>Data Pipe Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Pipe Actions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>